...
        android:id="@+id/addEvent"
        android:orderInCategory="100"
        android:title="@string/addevent"
        app:showAsAction="never"
        android:onClick="onClickAddEventListenet"/>
    <item
        android:id="@+id/addPreset"
        android:orderInCategory="100"
        android:title="@string/addpreset"
        app:showAsAction="never"
        android:onClick="onClickAddPresetListenet"/>
</menu>

